# mynorm

./: .gitignore  README.md  create_superuser.py  docker-compose.production.yml  docker-compose.stage.yml  docker-compose.test.yml  env.example  pyproject.toml  requirements.txt
.envs/.local/: .django  .postgres
.envs/.production/: .django  .postgres  .redis
.envs/.stage/: .django  .postgres  .redis
.github/workflows/: check.yml  deploy-production.yml  deploy-stage.yml
analytics/: admin.py  apps.py  exceptions.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
analytics/migrations/: 0001_initial.py  0002_initial.py  0003_activitystatistics_supervision.py  0004_supervision_end_date_supervision_start_date.py  0005_supervision_name.py  0006_alter_commentimage_url.py  0007_rename_url_commentimage_image.py  (+15 more)
app_settings/: admin.py  apps.py  example_usage.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
config/: auth_views.py  health_views.py  settings.py  urls.py
core/: admin.py  admin_mixins.py  exceptions.py  model_mixins.py  models.py  paginators.py  permissions.py  serializers.py  urls.py  utils.py  views.py
gallery/: admin.py  apps.py  models.py
layouts/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
scripts/: debug-build.sh  fix-dependencies.sh  install-deps-uv.sh  install-poetry-deps.sh  quick-fix-uv.sh  rebuild-django.sh  test-redis.sh  update-requirements.sh
users/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
(+58 files in other folders)
